--- a/templates/admin_temp/add_fees.html
+++ b/templates/admin_temp/add_fees.html
@@ -6,41 +6,54 @@
                     <div class="col-sm-12 col-xl-6">
                         <div class="bg-light rounded h-100 p-4">
                             <h6 class="mb-4">Add Fees</h6>
-                            <form method="post">{% csrf_token %}
+                            <form method="post" data_bill_url="{% url 'ajax_load_bill' %}">{% csrf_token %}
                             <div class="form-floating mb-3">
                                 {{form|crispy}}
-                            </div>
-                            </form>
 
-<!--                                <input type="email" class="form-control" id="floatingInput"-->
-<!--                                    placeholder="name@example.com">-->
-<!--                                <label for="floatingInput">Email address</label>-->
-<!--                            </div>-->
-<!--                            <div class="form-floating mb-3">-->
-<!--                                <input type="password" class="form-control" id="floatingPassword"-->
-<!--                                    placeholder="Password">-->
-<!--                                <label for="floatingPassword">Password</label>-->
-<!--                            </div>-->
-<!--                            <div class="form-floating mb-3">-->
-<!--                                <select class="form-select" id="floatingSelect"-->
-<!--                                    aria-label="Floating label select example">-->
-<!--                                    <option selected>Open this select menu</option>-->
-<!--                                    <option value="1">One</option>-->
-<!--                                    <option value="2">Two</option>-->
-<!--                                    <option value="3">Three</option>-->
-<!--                                </select>-->
-<!--                                <label for="floatingSelect">Works with selects</label>-->
-<!--                            </div>-->
-<!--                            <div class="form-floating">-->
-<!--                                <textarea class="form-control" placeholder="Leave a comment here"-->
-<!--                                    id="floatingTextarea" style="height: 150px;"></textarea>-->
-<!--                                <label for="floatingTextarea">Comments</label>-->
-<!--                            </div>-->
+
                             <br>
                             <div class="col-sm-10">
                     <button type="submit" class="btn btn-primary">Submit</button>
                   </div>
                         </div>
+                            </form>
                     </div>
+                    </div>
+<script
+  src="https://code.jquery.com/jquery-3.6.0.js"
+  integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+  crossorigin="anonymous"></script>
+<script>
+    $("#id_to_date").change(function () {
+        const url = $("#form").attr("data-bill-url");
+
+        const to_date = $(this).val();
+       const from_date = document.getElementById("id_from_date").value;
+       const studentId = document.getElementById("id_student").value;
+
+
+
+        $.ajax({
+            url: url,
+            data: {
+                'to_date': to_date,
+                'from_date': from_date,
+                'studentId': studentId,
+
+            },
+            success: function (data) {
+
+                $( "#id_mess_bill" ).val(data.mess_bill);
+                $( "#id_room_rent" ).val(data.room_rent);
+
+
+                }
+
+        });
+
+    });
+
+
+</script>
 
 {% endblock %}
