--- a/templates/admin_temp/add_notification.html
+++ b/templates/admin_temp/add_notification.html
@@ -5,16 +5,15 @@
 
                     <div class="col-sm-12 col-xl-6">
                         <div class="bg-light rounded h-100 p-4">
-                            <h6 class="mb-4">Add Foods</h6>
+                            <h6 class="mb-4">Add Notication</h6>
                             <form method="post">{% csrf_token %}
                             <div class="form-floating mb-3">
                                 {{form|crispy}}
-
-                            <br>
+                                <br>
                             <div class="col-sm-10">
                     <button type="submit" class="btn btn-primary">Submit</button>
                   </div>
-                            </div>
+                        </div>
                             </form>
                     </div>
                     </div>
