--- a/templates/admin_temp/admin_home.html
+++ b/templates/admin_temp/admin_home.html
@@ -110,8 +110,8 @@
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-th me-2">
                         </i>Manage Notification</a>
                         <div class="dropdown-menu bg-transparent border-0">
-<!--                            <a href="button.html" class="dropdown-item">Add Hostel</a>-->
-<!--                            <a href="typography.html" class="dropdown-item">View Hostel</a>-->
+                            <a href="{% url 'addnotification' %}" class="dropdown-item">Add Notification</a>
+                            <a href="{% url 'viewnotification' %}" class="dropdown-item">View Notification</a>
 <!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
                         </div>
                     </div>
