--- a/templates/student_temp/student_home.html
+++ b/templates/student_temp/student_home.html
@@ -102,7 +102,7 @@
                         </i>Attendence</a>
                         <div class="dropdown-menu bg-transparent border-0">
 <!--                            <a href="button.html" class="dropdown-item">Add Hostel</a>-->
-                            <a href="typography.html" class="dropdown-item">View Payments</a>
+                            <a href="{% url 'view_attend' %}" class="dropdown-item">View Attendance</a>
 <!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
                         </div>
                     </div>
