--- a/templates/student_temp/student_home.html
+++ b/templates/student_temp/student_home.html
@@ -127,7 +127,7 @@
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-th me-2">
                         </i>Profile</a>
                         <div class="dropdown-menu bg-transparent border-0">
-                            <a href="typography.html" class="dropdown-item">View profile</a>
+                            <a href="{% url 'profile' %}" class="dropdown-item">View profile</a>
 <!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
                         </div>
                     </div>
